--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
-    "migrate": "postgrator --config postgrator-config.js"
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "knex": "^0.20.13",
     "morgan": "^1.10.0",
     "pg": "^8.0.0",
     "winston": "^3.2.1"
