--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A starting point for Express apps",
   "main": "src/server.js",
   "scripts": {
-    "test": "mocha --require test/setup.js",
+    "test": "mocha --require test/setup.js --watch",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "predeploy": "npm audit",
